# yolo-toolchain

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
configs/: anchors_iia.yaml  augmentation.yaml  dataset_iia.yaml  dataset_smoking.yaml  default_train.yaml  pipeline_auto_annotate.yaml  pipeline_auto_annotate_smoking.yaml  pipeline_auto_annotate_test.yaml  pipeline_iia_best_practice.yaml  pipeline_iia_quick.yaml  pipeline_iia_train.yaml  pipeline_quick.yaml  pipeline_smoking.yaml  pipeline_smoking_finetune.yaml  pipeline_train.yaml
configs/nodes/: best-model-select.yaml  hard-example-mining.yaml  tta-inference.yaml
docs/: UPDATE-2026-03-26.md
docs/superpowers/plans/: 2026-03-30-p2-hard-example-mining-implementation-plan.md
docs/superpowers/specs/: 2026-03-30-p0-training-enhancement-design.md  2026-03-30-p2-hard-example-mining-design.md
src/: __init__.py  utils.py
src/eval/: __init__.py  diagnostics.py  error_analyzer.py  pr_curve_analyzer.py
src/export/: __init__.py  exporter.py
src/tools/: __init__.py  anchor_generator.py  augmentor.py  auto_annotator.py  best_model_selector.py  dataset_builder.py  downloader.py  hard_example_miner.py  hyperparameter_tuner.py  label_qc.py  pipeline.py  preprocess.py  tta_inference.py  verify_annotator.py
src/train/: __init__.py  freeze_trainer.py  incremental_trainer.py  pruner.py  trainer.py
tests/: test_auto_annotator.py
tests/tools/: test_anchor_generator.py  test_best_model_selector.py  test_hard_example_miner.py  test_hyperparameter_tuner.py  test_label_qc.py  test_pipeline.py  test_tta_inference.py
